terraform/apps/manifest/gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ${PREFIX}-common-gateway
  namespace: "istio-system"
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: common-tls
            namespace: "istio-system"
      allowedRoutes:
        namespaces:
          from: All
